--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </div>
 
     <div class="container">
-      <form class="add-toy-form">
+      <form id="toy-form" class="add-toy-form">
         <h3>Create a toy!</h3>
 
-        <input
+        <input id="toy-name-input"
           type="text"
           name="name"
           value=""
@@ -25,7 +25,7 @@
           class="input-text"
         />
         <br />
-        <input
+        <input id="image-url-input"
           type="text"
           name="image"
           value=""
